2010-07-16  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Tapelist.swg: better fix for temp filename

2010-07-15  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm: Correcly compute 'Filesystem taped' for
				       incremental.
	* installcheck/amreport.pl: Test it.

2010-07-15  Satya Ganga  <gast@zmanda.com>
	* config/amanda/progs.m4: Use correct search path for mt binary.

2010-07-14  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Tapelist.swg: append a slash to dirname() and make error
	  messages better

2010-07-14  Dustin J. Mitchell <dustin@zmanda.com>
	* configure.in config/amanda/shmem.m4: remove unnecessary config
	  checks

2010-07-13  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Report.pm: parse the planner's skipping a dump
	* perl/Amanda/Report/human.pm: present it correctly
	* installcheck/amreport.pl: adjust tests accordingly

2010-07-12  Nandan Athawale <nandan.athawale@gmail.com>
	* perl/Amanda/Taper/Scribe.pm: enable debugging whenever debug_taper
	  is set

2010-07-12  Orion Poplawski <orion@cora.nwra.com>
	* server-src/amoverview.pl: fix variable references in evals

2010-07-12  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Makefile.am installcheck/amoverview.pl: basic installcheck
	  for amoverview

2010-07-12  Orion Poplawski <orion@cora.nwra.com>
	* server-src/amoverview.pl: update to use Amanda::DB::Catalog
	* perl/Amanda/DB/Catalog.pm: add dump_timestamp to the unique dump keys
	* installcheck/Amanda_DB_Catalog.pl: update tests to check uniqueness
	* AUTHORS: add Orion

2010-07-12  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/conffile.c: fix error message

2010-07-12  Dustin J. Mitchell <dustin@zmanda.com>
	* example/amanda.conf.in example/template.d/advanced.conf.in
	  example/template.d/amanda-S3.conf.in: replace label_new_tapes with
	  autolabel

2010-07-12  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_Xfer.pl: fix test counts under -without-server
