@@ -1,4 +1,8 @@
 2010-07-16  Dustin J. Mitchell <dustin@zmanda.com>
+	* config/macro-archive/ac_prog_swig.m4: fix swig version detection
+	  - swig-2.0.0 works fine
+
+2010-07-16  Dustin J. Mitchell <dustin@zmanda.com>
 	* perl/Amanda/Tapelist.swg: better fix for temp filename
 
 2010-07-15  Jean-Louis Martineau <martineau@zmanda.com>
